css/menikah.css
/* ... */
@media (max-width: 599px) {
  .hero .hero-foot {
    display: none;
  }
}

.hero .hero-foot .hero-foot--wrapper {
  margin: 7px auto;
  height: 50px;
}

.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop {
  line-height: 38px;
  font-weight: 600;
  text-transform: ;
  letter-spacing: 1px;
  font-size: 1rem;
}

.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li {
  display: inline-block;
  padding-right: 15px;
  padding-left: 15px;
}

.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li.is-active a {
  border-bottom: 2px solid #c5a4c1;
}

.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a {
  color: #c5a4c1;
}

.hero .hero-foot .hero-foot--wrapper .hero-menu-desktop ul li a:hover {
  color: #c5a4c1;
  transition: all .2s ease-in-out;
  border-bottom: 2px solid #c28285;
}


.space40px{
  height: 40px;
}

.space24px{
  height: 24px;
}

.main-content {
  padding-top: 2rem;
  color: #000; 
  font-family: 'Raleway', sans-serif;
}

.main-content .section-dark {
  background-color: #fce7fe;
  padding: 80px 40px;
}

.main-content .section-darker {
  background-color: #c49dc7;
  padding: 80px 40px;
}

.main-content .section-dark.resume {
  height: 400px;
  padding-top: 60px;

}

@media (max-width: 599px) {
  .main-content .section-dark.resume {
    padding-top: 75px;
  }
}

.main-content .section-dark.resume .title {
  padding: 20px;
}

.main-content .section-dark.resume button {
  border: 2px solid #c5a4c1;
  background: white;
  color: #c5a4c1;
  height: 50px;
  width: 250px;
  font-size: 1rem;
  text-transform: uppercase;
}

.main-content .section-dark.resume .fa-download {
  color: #c5a4c1;
}

.main-content .section-dark.my-work {
  padding: 80px 40px;
}

.main-content .section-cashbac {
  background-color: rgb(238, 250, 253);
  padding: 80px 40px; 
}

@media (max-width: 599px) {
  .main-content .section-dark.foto-foto {
    padding: 75px 20px;
  }
}

.main-content .section-dark.foto-foto .foto-item {
  margin-bottom: 1rem;
  -webkit-transition: all .1s ease-in-out;
  transition: all .1s ease-in-out;
  border-radius: 5px;
  background-size: cover;
  background-repeat: no-repeat;
  box-shadow: 0 5px 20px rgba(14, 25, 80, 0.3);
}

.main-content .section-dark.my-work .work-item:hover {
  -webkit-transform: scale(1.055) translateY(-2px);
  transform: scale(1.055) translateY(-2px);
  -webkit-box-shadow: 0 2px 25px 0 rgba(30, 30, 30, 0.1);
  box-shadow: 0 2px 25px 0 rgba(30, 30, 30, 0.1);
}

.section-map {
  padding: 0 0 0 0 ;
}

.main-content .section-light {
  padding: 80px 40px;
}

.main-content .section-light.regular-section {
  padding-bottom: 80px;
}

.main-content .section-light.regular-section .is-larger {
  font-size: 1.2rem;
}

@media (max-width: 599px) {
  .main-content .section-light.regular-section .about-links {
    text-align: center;
  }
}

.main-content .section-light.regular-section .right-image img {
  border-radius: 11px;
  margin: 20px;
  box-shadow: 0 5px 20px rgba(14, 25, 80, 0.3);
}

@media (max-width: 599px) {
  .main-content .section-light.regular-section .right-image img {
    margin: auto;
  }
}

.main-content .section-light.skills {
  padding: 100px;
}

@media (max-width: 599px) {
  .main-content .section-light.skills {
    padding: 50px 20px 40px 20px;
    padding-bottom: 20px;
  }
}

.main-content .section-light.skills h1 {
  padding: 10px;
  font-size: 24px;
}

.main-content .section-light.contact {
  padding: 80px;
}

.main-content .section-light.contact button {
  width: 100%;
  color: white;
  height: 50px;
  font-size: 1.1rem;
  text-transform: uppercase;
  font-family: 'Raleway', sans-serif;
}

@media (max-width: 599px) {
  .main-content .section-light.contact {
    padding: 80px 40px;
  }
}

.main-content .section-color.pertanyaan {
  padding: 100px;
  background-color: #c5a4c1;
  color: white;
}

.main-content .section-color.pertanyaan .title,
.main-content .section-color.pertanyaan .subtitle {
  color: white;
}

.main-content .section-color.pertanyaan i {
  font-size: 3rem;
  padding: 20px;
}

.main-content .section-title {
  font-family: 'Raleway', sans-serif;
  font-weight: 900;
  color: #000000;
  text-transform: uppercase;
  font-size: 1.5rem;
  letter-spacing: 0px;
  padding-bottom: 60px;
}

.nama-lengkap {
  font-family: 'Rouge Script', sans-serif;
  color: #c5a4c1;
  font-size: 3.5rem;
  letter-spacing: 0px;
  padding-bottom: 6px;
  line-height: 3.7rem;
}

.ampersand {
font-size: 5rem;
font-family: 'Rouge Script', sans-serif;
color: #c5a4c1;
line-height: 5rem;
display: inline-block;
vertical-align: middle;
}

.bodytext {
  font-size: 18px;
}

.waktu {
  font-size: 1.4rem;
  font-family: 'Raleway', sans-serif;
}

.tanggal-angka {
  font-size: 5rem;
  font-family: 'Raleway', sans-serif;
  font-weight: 900;
  line-height: 1;
}

.tempat {
  font-size: 1.4rem;
  font-family: 'Raleway', sans-serif;
  font-size: ;
  margin-bottom: 50px;
}


.has-vertically-align {
  vertical-align: middle;
}

.footer {
  bottom: 0;
  width: 100vw;
  padding: 10px 10px 10px 10px;
  line-height: 25px;
  text-align: center;
  vertical-align: middle;
  background: #c28285;
  color: whitesmoke;    
}

.footer p {
  color: white;
  font-weight: 500;
  font-size: 10pt;
  display: inline-block;
  vertical-align: middle;
}


.main-content .no-padding-top {
  padding-top: 0px;
}

.footer img{
  margin: 10px 0px 10px 10px;
  display: inline-block;
  max-height: 24px;
  vertical-align: middle;
}

.footer a .nav-item {
  color: whitesmoke;
}

.fa-download {
  color: #43485c;
}

.divider {
  margin: 40px 25px;
  display: inline-block;
  max-height: 60px;
  vertical-align: middle;
}

.bismillah {
  margin: 25px;
  display: inline-block;
  max-height: 50px;
  vertical-align: middle;
}
/* ... */

